--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stipop-js-sdk",
-  "version": "0.0.1-beta",
+  "version": "0.0.2-beta",
   "description": "stipop sticker sdk",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/stipop-development/stipop-js-sdk.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "stipop",
     "sticker",
@@ -26,11 +29,11 @@
   "homepage": "https://stipop.io",
   "dependencies": {
     "active-resource": "^1.0.0-beta.7",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.5.12",
     "querystringify": "^2.2.0"
   },
   "devDependencies": {
-    "@types/node-fetch": "^2.5.11",
+    "@types/node-fetch": "^2.5.12",
     "@types/querystringify": "^2.0.0",
     "ts-node": "^10.1.0"
   }
