--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "stipop-js-sdk",
-  "version": "0.0.3-beta",
+  "version": "0.1.0-beta",
   "description": "stipop sticker sdk",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc"
+    "build": "tsc",
+    "bundle": "webpack",
+    "web": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,10 @@
   "devDependencies": {
     "@types/node-fetch": "^2.5.12",
     "@types/querystringify": "^2.0.0",
-    "ts-node": "^10.1.0"
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.7.3",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   }
 }
